<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:orientation="vertical" >


    <Button
        android:id="@+id/button_choisirUnite"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="20dp"
        android:text="@string/Button1_Text" />


    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valeur_convertir" />

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Example_Value"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bananes"
            tools:text="Bananes" />

    </LinearLayout>

    <Button
        android:id="@+id/button_EffectuerConversion"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="20dp"
        android:text="@string/Button2_text" />

    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/resultats" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:layout_weight="1" android:layout_marginEnd="5dp"/>


        <TextView
            android:id="@+id/unites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" android:layout_marginStart="5dp"/>
    </LinearLayout>


</LinearLayout>
